--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,23 +7,16 @@ on:
 
 jobs:
   lint:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          node-version: '14.x'
 
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: '3.x'
-          node-version: '14.x'
 
       - name: Install dependencies
         run: |
@@ -35,5 +28,4 @@ jobs:
         run: |
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
 
