--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pylint
+          pip install flake8
           pip install -r requirement.txt
 
       - name: Lint
         run: |
-          pylint app.py
+          flake8 app.py
