--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
           repository: ${{ github.repository }}
           ref: ${{ github.ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
+          node-version: 'x'
 
       - name: Set up Python
         uses: actions/setup-python@v3
@@ -23,6 +24,7 @@ jobs:
           python-version: '3.x'
           architecture: 'x64'
           token: ${{ secrets.GITHUB_TOKEN }}
+          node-version: 'x'
 
       - name: Install dependencies
         run: |
