--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4  # Updated to v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3  # No change needed here, but ensure it's compatible
+        uses: actions/setup-node@v3  # Consider updating to v4 if available
 
       - name: Set up Python
         uses: actions/setup-python@v4  # Ensure this is the latest version
